force-app/main/default/objects/Customer_Account__c/fields/Accept_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Accept_3rd_Party__c</fullName>
    <label>Accept 3rd Party</label>
    <length>1</length>
    <type>Text</type>
</CustomField>