force-app/main/default/objects/Customer_Account__c/fields/Accept_Col_Calls__c.field-meta.xml
<CustomField>
    <fullName>Accept_Col_Calls__c</fullName>
    <label>Accept Col Calls</label>
    <length>1</length>
    <type>Text</type>
</CustomField>