force-app/main/default/objects/Customer_Account__c/fields/Account_Pwd__c.field-meta.xml
<CustomField>
    <fullName>Account_Pwd__c</fullName>
    <label>Account Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>