force-app/main/default/objects/Customer_Account__c/fields/Amt_Due_Ovr_60__c.field-meta.xml
<CustomField>
    <fullName>Amt_Due_Ovr_60__c</fullName>
    <label>Amount Due Over 60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>