force-app/main/default/objects/Customer_Account__c/fields/Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay__c</fullName>
    <label>Auto Pay</label>
    <length>1</length>
    <type>Text</type>
</CustomField>