force-app/main/default/objects/Customer_Account__c/fields/B_Stly_Lst_Period__c.field-meta.xml
<CustomField>
    <fullName>B_Stly_Lst_Period__c</fullName>
    <label>Billed Separately Last Period</label>
    <length>1</length>
    <type>Text</type>
</CustomField>