force-app/main/default/objects/Customer_Account__c/fields/Bank_Ac_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Ac_Type__c</fullName>
    <label>Bank Account Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>