force-app/main/default/objects/Customer_Account__c/fields/Bank_Draft__c.field-meta.xml
<CustomField>
    <fullName>Bank_Draft__c</fullName>
    <label>Bank Draft</label>
    <length>20</length>
    <type>Text</type>
</CustomField>