force-app/main/default/objects/Customer_Account__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>