force-app/main/default/objects/Customer_Account__c/fields/Bank_Rt_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Rt_Number__c</fullName>
    <label>Bank Routing Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>