force-app/main/default/objects/Customer_Account__c/fields/Bill_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle__c</fullName>
    <label>Bill Cycle</label>
    <length>2</length>
    <type>Text</type>
</CustomField>