force-app/main/default/objects/Customer_Account__c/fields/Bill_Method__c.field-meta.xml
<CustomField>
    <fullName>Bill_Method__c</fullName>
    <label>Bill Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>