force-app/main/default/objects/Customer_Account__c/fields/Bill_Mtd_Des__c.field-meta.xml
<CustomField>
    <fullName>Bill_Mtd_Des__c</fullName>
    <label>Bill Method Description</label>
    <type>TextArea</type>
</CustomField>