force-app/main/default/objects/Customer_Account__c/fields/Billed_Thr_Date__c.field-meta.xml
<CustomField>
    <fullName>Billed_Thr_Date__c</fullName>
    <label>Billed Through Date</label>
    <type>Date</type>
</CustomField>