force-app/main/default/objects/Customer_Account__c/fields/Billing_Sq_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sq_No__c</fullName>
    <label>Billing Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>