force-app/main/default/objects/Customer_Account__c/fields/Block_EBPP__c.field-meta.xml
<CustomField>
    <fullName>Block_EBPP__c</fullName>
    <label>Block EBPP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>