force-app/main/default/objects/Customer_Account__c/fields/Block_OBP__c.field-meta.xml
<CustomField>
    <fullName>Block_OBP__c</fullName>
    <label>Block OBP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>