force-app/main/default/objects/Customer_Account__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>