force-app/main/default/objects/Customer_Account__c/fields/Connect_Date__c.field-meta.xml
<CustomField>
    <fullName>Connect_Date__c</fullName>
    <label>Connect Date</label>
    <type>Date</type>
</CustomField>