force-app/main/default/objects/Customer_Account__c/fields/County_C_Des__c.field-meta.xml
<CustomField>
    <fullName>County_C_Des__c</fullName>
    <label>County Code Description</label>
    <type>TextArea</type>
</CustomField>