force-app/main/default/objects/Customer_Account__c/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <label>County Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>