force-app/main/default/objects/Customer_Account__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>