force-app/main/default/objects/Customer_Account__c/fields/Credit_Rtg_Des__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rtg_Des__c</fullName>
    <label>Credit Rating Description</label>
    <type>TextArea</type>
</CustomField>