force-app/main/default/objects/Customer_Account__c/fields/Cust_OwnM_Eq__c.field-meta.xml
<CustomField>
    <fullName>Cust_OwnM_Eq__c</fullName>
    <label>Cust OwnedMaint.Equip</label>
    <length>25</length>
    <type>Text</type>
</CustomField>