force-app/main/default/objects/Customer_Account__c/fields/Date_o_Lst_pro_Demo__c.field-meta.xml
<CustomField>
    <fullName>Date_o_Lst_pro_Demo__c</fullName>
    <label>Date o Last promotion &amp; Demotion</label>
    <type>Date</type>
</CustomField>