force-app/main/default/objects/Customer_Account__c/fields/Detail_Bills__c.field-meta.xml
<CustomField>
    <fullName>Detail_Bills__c</fullName>
    <label>Detail Bills</label>
    <length>1</length>
    <type>Text</type>
</CustomField>