force-app/main/default/objects/Customer_Account__c/fields/Dish_Ac_No__c.field-meta.xml
<CustomField>
    <fullName>Dish_Ac_No__c</fullName>
    <label>Dish Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>