force-app/main/default/objects/Customer_Account__c/fields/EBPP_Customer__c.field-meta.xml
<CustomField>
    <fullName>EBPP_Customer__c</fullName>
    <label>EBPP Customer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>