force-app/main/default/objects/Customer_Account__c/fields/Enrolled_OBP__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_OBP__c</fullName>
    <label>Enrolled OBP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>