force-app/main/default/objects/Customer_Account__c/fields/Federal_Tax_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Y_N__c</fullName>
    <label>Federal Tax Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>