force-app/main/default/objects/Customer_Account__c/fields/Fictitious_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fictitious_Flag__c</fullName>
    <label>Fictitious Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>