force-app/main/default/objects/Customer_Account__c/fields/Handling_C_Des__c.field-meta.xml
<CustomField>
    <fullName>Handling_C_Des__c</fullName>
    <label>Handling Code Description</label>
    <type>TextArea</type>
</CustomField>