force-app/main/default/objects/Customer_Account__c/fields/Handling_Code__c.field-meta.xml
<CustomField>
    <fullName>Handling_Code__c</fullName>
    <label>Handling Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>