force-app/main/default/objects/Customer_Account__c/fields/Interlata_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Interlata_Carrier__c</fullName>
    <label>Interlata Carrier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>