force-app/main/default/objects/Customer_Account__c/fields/Intralata_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Intralata_Carrier__c</fullName>
    <label>Intralata Carrier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>