force-app/main/default/objects/Customer_Account__c/fields/Last_Adst_Amt__c.field-meta.xml
<CustomField>
    <fullName>Last_Adst_Amt__c</fullName>
    <label>Last Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>