force-app/main/default/objects/Customer_Account__c/fields/Last_Bill_Method__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Method__c</fullName>
    <label>Last Bill Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>