force-app/main/default/objects/Customer_Account__c/fields/Last_Bill_Period__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Period__c</fullName>
    <label>Last Bill Period</label>
    <length>2</length>
    <type>Text</type>
</CustomField>