force-app/main/default/objects/Customer_Account__c/fields/Last_Credit_Rtg__c.field-meta.xml
<CustomField>
    <fullName>Last_Credit_Rtg__c</fullName>
    <label>Last Credit Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>