force-app/main/default/objects/Customer_Account__c/fields/Last_Pmt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pmt_Date__c</fullName>
    <label>Last Payment Date</label>
    <type>DateTime</type>
</CustomField>