force-app/main/default/objects/Customer_Account__c/fields/Last_St_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_St_Due_Date__c</fullName>
    <label>Last Statement Due Date</label>
    <type>DateTime</type>
</CustomField>