force-app/main/default/objects/Customer_Account__c/fields/Library_ID__c.field-meta.xml
<CustomField>
    <fullName>Library_ID__c</fullName>
    <label>Library ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>