force-app/main/default/objects/Customer_Account__c/fields/Lst_Mtd_Cyc_Per__c.field-meta.xml
<CustomField>
    <fullName>Lst_Mtd_Cyc_Per__c</fullName>
    <label>Last Mtd/Cyc/Per</label>
    <length>20</length>
    <type>Text</type>
</CustomField>