force-app/main/default/objects/Customer_Account__c/fields/Lst_Smt_Isue_Amt__c.field-meta.xml
<CustomField>
    <fullName>Lst_Smt_Isue_Amt__c</fullName>
    <label>Last Statement Issue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>