force-app/main/default/objects/Customer_Account__c/fields/Lst_St_Isue_Date__c.field-meta.xml
<CustomField>
    <fullName>Lst_St_Isue_Date__c</fullName>
    <label>Last Statement Issue Date</label>
    <type>DateTime</type>
</CustomField>