force-app/main/default/objects/Customer_Account__c/fields/Lst_Tmt_Date__c.field-meta.xml
<CustomField>
    <fullName>Lst_Tmt_Date__c</fullName>
    <label>Last Treatment Date</label>
    <type>DateTime</type>
</CustomField>