force-app/main/default/objects/Customer_Account__c/fields/M_f_b_ur_flg_Y_N__c.field-meta.xml
<CustomField>
    <fullName>M_f_b_ur_flg_Y_N__c</fullName>
    <label>MY ftr business user flag Y/N</label>
    <length>1</length>
    <type>Text</type>
</CustomField>