force-app/main/default/objects/Customer_Account__c/fields/Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Name_Format__c</fullName>
    <label>Name Format</label>
    <length>1</length>
    <type>Text</type>
</CustomField>