force-app/main/default/objects/Customer_Account__c/fields/Nine_D_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Nine_D_Zip_Code__c</fullName>
    <label>Nine Digit Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>