force-app/main/default/objects/Customer_Account__c/fields/No_Of_Pr_R_Chks__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Pr_R_Chks__c</fullName>
    <label>Number Of Prior Returned Checks</label>
    <length>2</length>
    <type>Text</type>
</CustomField>