force-app/main/default/objects/Customer_Account__c/fields/No_Of_Pr_S_Ntc__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Pr_S_Ntc__c</fullName>
    <label>Number Of Prior Second Notices</label>
    <length>2</length>
    <type>Text</type>
</CustomField>