force-app/main/default/objects/Customer_Account__c/fields/No_Of_Prior_Dcs__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Prior_Dcs__c</fullName>
    <label>Number Of Prior Disconnects</label>
    <length>2</length>
    <type>Text</type>
</CustomField>