force-app/main/default/objects/Customer_Account__c/fields/Ol_Bill_Pay_Cust__c.field-meta.xml
<CustomField>
    <fullName>Ol_Bill_Pay_Cust__c</fullName>
    <label>Online Bill Pay Customer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>