force-app/main/default/objects/Customer_Account__c/fields/Past_Due_Info__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Info__c</fullName>
    <label>Past Due Info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>