force-app/main/default/objects/Customer_Account__c/fields/Pbl_Non_Pbls__c.field-meta.xml
<CustomField>
    <fullName>Pbl_Non_Pbls__c</fullName>
    <label>Publish/Non-Publish</label>
    <length>20</length>
    <type>Text</type>
</CustomField>