force-app/main/default/objects/Customer_Account__c/fields/PIC_Frfeeze__c.field-meta.xml
<CustomField>
    <fullName>PIC_Frfeeze__c</fullName>
    <label>PIC Freeze</label>
    <length>20</length>
    <type>Text</type>
</CustomField>