force-app/main/default/objects/Customer_Account__c/fields/PLOC_Freeze__c.field-meta.xml
<CustomField>
    <fullName>PLOC_Freeze__c</fullName>
    <label>PLOC Freeze</label>
    <length>20</length>
    <type>Text</type>
</CustomField>