force-app/main/default/objects/Customer_Account__c/fields/Print_Off__c.field-meta.xml
<CustomField>
    <fullName>Print_Off__c</fullName>
    <label>Print Off</label>
    <length>1</length>
    <type>Text</type>
</CustomField>