force-app/main/default/objects/Customer_Account__c/fields/Priv_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Priv_Line_Type__c</fullName>
    <label>Private Line Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>