force-app/main/default/objects/Customer_Account__c/fields/Quantity_Of_Bills__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Bills__c</fullName>
    <label>Quantity Of Bills</label>
    <length>2</length>
    <type>Text</type>
</CustomField>