force-app/main/default/objects/Customer_Account__c/fields/Ref_To_Pay_Tax__c.field-meta.xml
<CustomField>
    <fullName>Ref_To_Pay_Tax__c</fullName>
    <label>Refused To Pay Tax</label>
    <length>1</length>
    <type>Text</type>
</CustomField>