force-app/main/default/objects/Customer_Account__c/fields/S_O_A_S_Lst_Bill__c.field-meta.xml
<CustomField>
    <fullName>S_O_A_S_Lst_Bill__c</fullName>
    <label>Service Order Activity Since Last Bill</label>
    <length>1</length>
    <type>Text</type>
</CustomField>