force-app/main/default/objects/Customer_Account__c/fields/Sch_Code_Des__c.field-meta.xml
<CustomField>
    <fullName>Sch_Code_Des__c</fullName>
    <label>School Code Description</label>
    <type>TextArea</type>
</CustomField>