force-app/main/default/objects/Customer_Account__c/fields/School_Code__c.field-meta.xml
<CustomField>
    <fullName>School_Code__c</fullName>
    <label>School Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>