force-app/main/default/objects/Customer_Account__c/fields/Ser_Type_Des__c.field-meta.xml
<CustomField>
    <fullName>Ser_Type_Des__c</fullName>
    <label>Service Type Description</label>
    <type>TextArea</type>
</CustomField>