force-app/main/default/objects/Customer_Account__c/fields/Serv_Area_Contl__c.field-meta.xml
<CustomField>
    <fullName>Serv_Area_Contl__c</fullName>
    <label>Service Area Control #</label>
    <length>7</length>
    <type>Text</type>
</CustomField>