force-app/main/default/objects/Customer_Account__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>