force-app/main/default/objects/Customer_Account__c/fields/State_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Code__c</fullName>
    <label>State Tax Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>