force-app/main/default/objects/Customer_Account__c/fields/State_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Exempt__c</fullName>
    <label>State Tax Exempt</label>
    <length>2</length>
    <type>Text</type>
</CustomField>