force-app/main/default/objects/Customer_Account__c/fields/Tax_Exempt_Cat__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Cat__c</fullName>
    <label>Tax Exempt Cat.</label>
    <length>3</length>
    <type>Text</type>
</CustomField>