force-app/main/default/objects/Customer_Account__c/fields/Taxing_District__c.field-meta.xml
<CustomField>
    <fullName>Taxing_District__c</fullName>
    <label>Taxing District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>