force-app/main/default/objects/Customer_Account__c/fields/Toll_Limit_Code__c.field-meta.xml
<CustomField>
    <fullName>Toll_Limit_Code__c</fullName>
    <label>Toll Limit Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>