force-app/main/default/objects/Customer_Account__c/fields/Toll_Limit_Des__c.field-meta.xml
<CustomField>
    <fullName>Toll_Limit_Des__c</fullName>
    <label>Toll Limit Description</label>
    <type>TextArea</type>
</CustomField>