force-app/main/default/objects/Customer_Account__c/fields/Ttl_A_S_Lst_Bill__c.field-meta.xml
<CustomField>
    <fullName>Ttl_A_S_Lst_Bill__c</fullName>
    <label>Total Amount Since Last Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>