force-app/main/default/objects/Customer_Account__c/fields/Tx_Dist_Des__c.field-meta.xml
<CustomField>
    <fullName>Tx_Dist_Des__c</fullName>
    <label>Taxing District Description</label>
    <type>TextArea</type>
</CustomField>