force-app/main/default/objects/Customer_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Amt_Due_Ovr_60__c</columns>
    <columns>Bank_Ac_Number__c</columns>
    <columns>Auto_Pay__c</columns>
    <columns>Bank_Rt_Number__c</columns>
    <columns>Account_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>